[gd_scene load_steps=7 format=3 uid="uid://bjv3cb21jdiu3"]

[ext_resource type="Script" path="res://main_window/navigation_bar_left/navigation_bar_left.gd" id="1_kn5h0"]
[ext_resource type="Texture2D" uid="uid://kpsxfahirjkd" path="res://main_window/navigation_bar_left/images/arrow_left.svg" id="1_rckff"]
[ext_resource type="Texture2D" uid="uid://botihipdanr3y" path="res://main_window/navigation_bar_left/images/arrow_left_double.svg" id="2_s8dw8"]
[ext_resource type="Texture2D" uid="uid://dg16vv3p66p28" path="res://main_window/navigation_bar_left/images/today.svg" id="3_vrbxd"]

[sub_resource type="InputEventAction" id="InputEventAction_e5hy0"]
action = &"jump_to_today"

[sub_resource type="Shortcut" id="Shortcut_f2sw1"]
events = [SubResource("InputEventAction_e5hy0")]

[node name="NavigationBarLeft" type="VBoxContainer"]
script = ExtResource("1_kn5h0")

[node name="PreviousDay" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
icon = ExtResource("1_rckff")

[node name="ShiftViewBackward" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
icon = ExtResource("2_s8dw8")

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="Today" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
shortcut = SubResource("Shortcut_f2sw1")
shortcut_in_tooltip = false
icon = ExtResource("3_vrbxd")

[connection signal="pressed" from="PreviousDay" to="." method="_on_previous_day_pressed"]
[connection signal="pressed" from="ShiftViewBackward" to="." method="_on_shift_view_backward_pressed"]
[connection signal="pressed" from="Today" to="." method="_on_today_pressed"]
